--- a/packet_encoding/Cargo.toml
+++ b/packet_encoding/Cargo.toml
@@ -8,3 +8,7 @@ cobs = { version = "0.5.0", features=[], default-features = false}
 crc16 = "0.4.0"
 serde = { version = "1.0", default-features = false, features = ["derive"] }
 serde_cbor = { version = "0.11.2", default-features = false }
+
+
+[features]
+nostd = []
