--- a/motor_controller/Cargo.toml
+++ b/motor_controller/Cargo.toml
@@ -6,7 +6,7 @@ version      = "0.1.0"
 
 [[bin]]
 name = "espc3-test-project"
-path = "./src/bin/main.rs"
+path = "./src/main.rs"
 
 [dependencies]
 esp-hal = { version = "1.0.0", features = ["esp32c3", "unstable"] }
@@ -42,7 +42,7 @@ smoltcp = { version = "0.12.0", default-features = false, features = [
 
 
 heapless = { version = "0.9.2", features = ["serde"] }
-packet_encoding = { path = "../packet_encoding" }
+packet_encoding = { path = "../libraries/packet_encoding" }
 serde = { version = "1.0", default-features = false, features = ["derive"] }
 
 
