--- a/motor_controller/Cargo.toml
+++ b/motor_controller/Cargo.toml
@@ -42,7 +42,7 @@ smoltcp = { version = "0.12.0", default-features = false, features = [
 
 
 heapless = { version = "0.9.2", features = ["serde"] }
-packet_encoding = { path = "../libraries/packet_encoding" }
+packet_encoding = { path = "../libraries/packet_encoding", default-features = false }
 serde = { version = "1.0", default-features = false, features = ["derive"] }
 
 
