We haz a packet finder!

--- a/libraries/packet_encoding/Cargo.toml
+++ b/libraries/packet_encoding/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 cobs = { version = "0.5.0", features=[], default-features = false}
 crc16 = "0.4.0"
+heapless = "0.9.2"
 serde = { version = "1.0", default-features = false, features = ["derive"] }
 serde_cbor = { version = "0.11.2", default-features = false }
 
