--- a/motor_controller/Cargo.toml
+++ b/motor_controller/Cargo.toml
@@ -25,6 +25,7 @@ heapless = { version = "0.9.2", features = ["serde"] }
 packet_encoding = { path = "../libraries/packet_encoding", default-features = false }
 topics = { path = "../libraries/topics" }
 serde = { version = "1.0", default-features = false, features = ["derive"] }
+embedded-hal = "1.0.0"
 
 
 
