--- a/libraries/robot/Cargo.toml
+++ b/libraries/robot/Cargo.toml
@@ -10,7 +10,7 @@ packet_trait = { path = "../packet_trait" }
 topics = { path = "../topics" }
 
 serde = "1.0.228"
-serial = "0.4.0"
+serialport = "4.2.0"
 chrono = "0.4.42"
 heapless = "0.9.2"
 serde_json = "1.0.147"
