--- a/web_interface/my-app/package.json
+++ b/web_interface/my-app/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "cbor-x": "^1.6.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
