--- a/web_interface/my-app/package.json
+++ b/web_interface/my-app/package.json
@@ -14,6 +14,7 @@
     "cbor-x": "^1.6.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-window": "^1.8.10",
     "recharts": "^3.6.0"
   },
   "devDependencies": {
