--- a/motor_controller/Cargo.toml
+++ b/motor_controller/Cargo.toml
@@ -24,6 +24,7 @@ esp-alloc = "0.9.0"
 heapless = { version = "0.9.2", features = ["serde"] }
 packet_encoding = { path = "../libraries/packet_encoding", default-features = false }
 topics = { path = "../libraries/topics" }
+packet_trait = { path = "../libraries/packet_trait" }
 serde = { version = "1.0", default-features = false, features = ["derive"] }
 embedded-hal = "1.0.0"
 libm = "0.2.15"
