--- a/web_interface/my-app/package.json
+++ b/web_interface/my-app/package.json
@@ -15,7 +15,9 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-window": "^1.8.10",
-    "recharts": "^3.6.0"
+    "recharts": "^3.6.0",
+    "vite-plugin-top-level-await": "^1.6.0",
+    "vite-plugin-wasm": "^3.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
